--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,7 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+<%= react_component 'Title' %>
+<%= react_component 'Main' %>
+<%= react_component('test', name: 'John') %>
+
+<div class="container"></div>
